--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "reactjs-heap": "^1.0.3",
     "redux-logger": "^3.0.6",
     "sass": "^1.32.6",
     "shards-react": "^1.0.3",
