--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dotenv": "^0.1.3",
     "react-dropzone-uploader": "^2.11.0",
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.2",
@@ -24,11 +25,19 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
+    "test": "react-dotenv && react-scripts test",
     "eject": "react-scripts eject",
     "eslint-fix": "eslint . --ext .js,.jsx --fix"
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "API_ENDPOINT_DEV",
+      "API_ENDPOINT_PROD",
+      "S3_BUCKET_ENDPOINT",
+      "GOOGLE_CLIENT_ID"
+    ]
   },
   "eslintConfig": {
     "extends": [
