--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "pure-react-carousel": "^1.27.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dotenv": "^0.1.3",
     "react-dropzone-uploader": "^2.11.0",
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.2",
+    "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "reactjs-heap": "^1.0.3",
@@ -22,6 +24,7 @@
     "sass": "^1.32.6",
     "shards-react": "^1.0.3",
     "shards-ui": "^3.0.0",
+    "uuidv4": "^6.2.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
