--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dotenv": "^0.1.3",
     "react-dropzone-uploader": "^2.11.0",
     "react-google-login": "^5.2.2",
+    "react-particles-js": "^3.4.1",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
