--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.1",
     "react-dotenv": "^0.1.3",
     "react-dropzone-uploader": "^2.11.0",
+    "react-ga": "^3.3.0",
     "react-google-login": "^5.2.2",
     "react-particles-js": "^3.4.1",
     "react-redux": "^7.2.2",
