--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "pure-react-carousel": "^1.27.6",
     "react": "^17.0.1",
+    "react-alice-carousel": "^2.4.0",
     "react-dom": "^17.0.1",
     "react-dotenv": "^0.1.3",
     "react-dropzone-uploader": "^2.11.0",
